--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+click==8.2.1
+joblib==1.5.1
+nltk==3.9.1
+numpy==2.3.1
+pandas==2.3.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+scikit-learn==1.7.0
+scipy==1.15.3
+six==1.17.0
+-e git+https://github.com/PhantomOrion2000/vc-emotion-detection.git@989c871a606e6694a4b46d6d56b605bb31cbcda8#egg=src
+threadpoolctl==3.6.0
+tqdm==4.67.1
+tzdata==2025.2
+xgboost==3.0.2
